[FIX] 시나리오 테스트 과정에서 발생한 에러 수정